--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,7 +1,7 @@
 <% @page_title = @user.display_name %>
 
 <% content_for :top_menu do %>
-  <%= link_to 'Users', admin_users_path %>
+  <%= link_to "Users", admin_users_path %>
 <% end %>
 
 <%= render "form" %>
