--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,9 +1,8 @@
 <% @page_title = @user.display_name %>
 
 <% content_for :top_menu do %>
-  <%= link_to 'Users', admin_users_path %>
+  <%= link_to "Users", admin_users_path %>
 <% end %>
-
 
 <%= tr_show :user, :first_name %>
 <%= tr_show :user, :last_name %>
