--- a/app/views/home/env.html.erb
+++ b/app/views/home/env.html.erb
@@ -1,5 +1,5 @@
-<% @page_title = 'Env' %>
+<% @page_title = "Env" %>
 
 <p>Return to the <a href="/">Home page.</a></p>
 
-<% ENV.keys.sort.each {|k| logger.debug sprintf("%-25s %s", k, ENV[k]) } %>
+<% ENV.keys.sort.each { |k| logger.debug sprintf("%-25s %s", k, ENV[k]) } %>
