--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,8 +3,8 @@
 
 <% content_for :top_menu do %>
   <span>
-    <%= link_to 'Edit project', edit_project_path(@project) %> |
-    <%= link_to 'New activity', new_project_activity_path(@project) %>
+    <%= link_to "Edit project", edit_project_path(@project) %> |
+    <%= link_to "New activity", new_project_activity_path(@project) %>
   </span>
 <% end %>
 
