--- a/app/views/timer/replace_page.js.erb
+++ b/app/views/timer/replace_page.js.erb
@@ -1,2 +1,2 @@
-$("#clock-face").html("<%= escape_javascript(render partial: 'clock_face' )%>");
-$("#activity-report").html("<%= escape_javascript(render partial: 'activity_report' )%>");
+$("#clock-face").html("<%= escape_javascript(render partial: "clock_face" )%>");
+$("#activity-report").html("<%= escape_javascript(render partial: "activity_report" )%>");
