--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,7 +1,7 @@
-<% @page_title = 'New User' %>
+<% @page_title = "New User" %>
 
 <% content_for :top_menu do %>
-  <%= link_to 'Users', admin_users_path %>
+  <%= link_to "Users", admin_users_path %>
 <% end %>
 
 <%= render "form" %>
