--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,7 +1,7 @@
-<% @page_title = 'New Client' %>
+<% @page_title = "New Client" %>
 
 <% content_for :top_menu do %>
-  <%= link_to 'All clients', clients_path %>
+  <%= link_to "All clients", clients_path %>
 <% end %>
 
-<%= render 'form' %>
+<%= render "form" %>
