--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,37 +1,37 @@
 <nav>
 
-  <%= link_to image_pack_tag('jg-logo.svg', id: :logo, size: 50,
-                             alt: 'Home page'),
-    root_path, class: 'nav-link' %>
+  <%= link_to image_pack_tag("jg-logo.svg", id: :logo, size: 50,
+                             alt: "Home page"),
+    root_path, class: "nav-link" %>
 
-  <%= link_to('Home', root_path, class: 'nav-link') %>
+  <%= link_to("Home", root_path, class: "nav-link") %>
 
   <% if user_signed_in? %>
 
-    <%= link_to('Timer', timer_path, class: 'nav-link', id: 'nav-timer-link') %>
+    <%= link_to("Timer", timer_path, class: "nav-link", id: "nav-timer-link") %>
 
-    <%= link_to('Clients', clients_path, class: 'nav-link') %>
+    <%= link_to("Clients", clients_path, class: "nav-link") %>
 
-    <%= link_to('Projects', projects_path, class: 'nav-link') %>
+    <%= link_to("Projects", projects_path, class: "nav-link") %>
 
     <% if admin? %>
-      <%= link_to('Users', admin_users_path, class: 'nav-link') %>
+      <%= link_to("Users", admin_users_path, class: "nav-link") %>
     <% end %>
 
     <%= link_to(current_user.display_name.truncate(8),
                 edit_user_registration_path,
-                class: 'nav-link') %>
+                class: "nav-link") %>
 
-    <%= link_to('Logout', destroy_user_session_path,
-                method: :delete, class: 'nav-link') %>
+    <%= link_to("Logout", destroy_user_session_path,
+                method: :delete, class: "nav-link") %>
 
   <% else %>
 
-    <%= link_to('Login', new_user_session_path,
-                class: 'nav-link') %>
+    <%= link_to("Login", new_user_session_path,
+                class: "nav-link") %>
 
-    <%= link_to('Register', new_user_registration_path,
-                class: 'nav-link') %>
+    <%= link_to("Register", new_user_registration_path,
+                class: "nav-link") %>
   <% end %>
 
 </nav>
