--- a/app/views/timer/_clock_face.html.erb
+++ b/app/views/timer/_clock_face.html.erb
@@ -1,11 +1,11 @@
-<%= form_with(model: @timer, url: timer_path, class: 'timer-form') do |form| %>
+<%= form_with(model: @timer, url: timer_path, class: "timer-form") do |form| %>
 
   <div class="left-side">
     <%= form.text_field :name,
-        'data-scope': 'timer.name',
-        'data-timer_id': @timer.id,
-        class: 'name-input',
-        placeholder: 'What are you working on?' %>
+        "data-scope": "timer.name",
+        "data-timer_id": @timer.id,
+        class: "name-input",
+        placeholder: "What are you working on?" %>
   </div>
 
   <div class="right-side">
@@ -18,8 +18,7 @@
       data-toggle="modal"
       data-target="#project-select"
       data-scope="timer.project"
-      data-timer_id="<%= @timer.id %>"
-    >
+      data-timer_id="<%= @timer.id %>">
       <% if @timer.persisted? %>
         <div
           class="project-dot"
@@ -35,7 +34,7 @@
     </div>
 
     <% unless @timer.persisted? %>
-      <input type="image" src="<%= image_path('play-button.svg') %>"
+      <input type="image" src="<%= image_path("play-button.svg") %>"
              alt="Start acitivty">
     <% end %>
 
@@ -43,12 +42,12 @@
 
     <% if @timer.persisted? %>
 
-      <%= link_to image_pack_tag('check-mark.svg', size: 18,
-                                 alt: 'Complete activty'),
+      <%= link_to image_pack_tag("check-mark.svg", size: 18,
+                                 alt: "Complete activty"),
         timer_finish_path, method: :post, remote: true %>
 
-      <%= link_to image_pack_tag('cross.svg', size: 15,
-                                 alt: 'Cancel activity'),
+      <%= link_to image_pack_tag("cross.svg", size: 15,
+                                 alt: "Cancel activity"),
         timer_path, method: :delete, remote: true %>
 
     <% end %>
