--- a/app/views/timer/_project_select.html.erb
+++ b/app/views/timer/_project_select.html.erb
@@ -17,19 +17,18 @@
         <% clients.each do |client| %>
           <% next if client.projects.length == 0 %>
           <% client_name =
-             client.name.present? ? client.name : 'NO CLIENT' %>
+             client.name.present? ? client.name : "NO CLIENT" %>
           <div class="client-line"><%= client_name %></div>
 
           <% client.projects.each do |project| %>
             <% project_name =
-               project.name.present? ? project.name : 'No Project' %>
+               project.name.present? ? project.name : "No Project" %>
             <div
               class="project-line"
               data-project_id="<%= project.id %>"
               data-client_name="<%= client_name %>"
               data-project_name="<%= project_name %>"
-              data-project_color="<%= project.color %>"
-            >
+              data-project_color="<%= project.color %>">
               <div class="project-dot" style="background-color: <%= project.color %>;"></div>
               <%= project_name %>
             </div>
