--- a/app/views/timer/replace_activity.js.erb
+++ b/app/views/timer/replace_activity.js.erb
@@ -1,1 +1,1 @@
-$("#activity-report").html("<%= escape_javascript(render partial: 'activity_report' )%>");
+$("#activity-report").html("<%= escape_javascript(render partial: "activity_report" )%>");
