--- a/app/views/timer/replace_clock.js.erb
+++ b/app/views/timer/replace_clock.js.erb
@@ -1,1 +1,1 @@
-$("#clock-face").html("<%= escape_javascript(render partial: 'clock_face' )%>");
+$("#clock-face").html("<%= escape_javascript(render partial: "clock_face" )%>");
