--- a/app/javascript/stylesheets/views/vendor.scss
+++ b/app/javascript/stylesheets/views/vendor.scss
@@ -2,7 +2,7 @@
 
 @import '../variables';
 
-@import '@primer/octicons/build/build.css';
+// @import '@primer/octicons/build/build.css';
 
 /* Unused.
 
