--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,3 +20,5 @@
   At the end of the day, the sample data will be cleared out
   and recreated.
 </p>
+
+<%= react_component("YohWorld", props: { name: "friend" }, prerender: false) %>
